->Fitting done in QualityControl::Uniformity::AnalyzeResponseUniformityClusters::fitHistos() will only consider slice histograms that are not null pointers themselves, and with at least 1 entry

Update: August 26 2016
==================================================
->Updated default GE1/1-VII-L & GE1/1-VII-S mapping again, now origin is in center of detector's local coordinate (matches DPG)

Update: August 24 2016
==================================================
->Removed AnalysisSetupUniformity::fUniformityTolerance and all associated functionality

Update: August 23 2016
==================================================
->Added method AnalyzeResponseUniformityHits::findDeadStrips(), produces a text file including tabular data of dead strips in eta/phi
->Added function QualityControl::Uniformity::getPhiStripNum() for converting strip number in iEta row to iPhi sector
->Added function QualityControl::Uniformity::getPhiSectorVal() for determining which phi sector an iEta strip is in
->Added overloaded function QualityControl::Timing::printStreamStatus() for dealing with std::fstream objects
->Changed InterfaceAnalysis::storeResults to take 2 arguments, the second being the file name of the input TFile
->InterfaceAnalysis::storeResults will now call AnalyzeResponseUniformityHits::findDeadStrips()

Update: August 19th 2016
==================================================
->Fixed an error in VisualizeUniformity where iphi was drawn in the wrong order on the summary canvases

Update: August 18th 2016
==================================================
->Changed the mapping files, config/Mapping_GE11-VII-S.cfg and config/Mapping_GE11-VII-L.cfg, to have the width & height matching the CMS Geometry
->Note the CMS Geometry for GE1/1 is found in table 2 of https://twiki.cern.ch/twiki/bin/viewauth/CMS/GEMGeometryStatusNew#GE_1_1_Global_Position

Update: July 7th 2016
==================================================