@@ -11,6 +11,7 @@ Update: August 31 2016
 ==================================================
 ->Fixed a bug where fitting in QualityControl::Uniformity::AnalyzeResponseUniformityClusters::fitHistos() could be performed on a histogram with 0 entries thus leading to a seg fault with a null TFitResultPtr being returned.
 ->Fitting done in QualityControl::Uniformity::AnalyzeResponseUniformityClusters::fitHistos() will only consider slice histograms that are not null pointers themselves, and with at least 1 entry
+->Changed int main() in src/analyzeUniformity.cpp to exit if no input files are found rather than continue and crash (due to no valid input...)
 
 Update: August 26 2016
 ==================================================
